name:                buh
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Bup routines.
description:         Bup routines.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/buh

source-repository head
  type: git
  location: git://github.com/noteed/buh.git

executable buh
  hs-source-dirs:      bin
  main-is:             buh.hs
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       base16-bytestring == 0.1.*,
                       binary == 0.7.*,
                       bytestring == 0.9.*,
                       directory == 1.1.*,
                       filepath == 1.3.*,
                       old-locale == 1.0.*,
                       process == 1.1.*,
                       SHA == 1.6.*,
                       text == 0.11.*,
                       thyme == 0.3.*,
                       zlib == 0.5.*
  ghc-options:         -Wall
                       -O2
