name:                buh
version:             0.0.0
Cabal-Version:       >= 1.8
synopsis:            Bup routines.
description:         Bup routines.
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/buh

source-repository head
  type: git
  location: git://github.com/noteed/buh.git

executable buh
  hs-source-dirs:      bin
  main-is:             buh.hs
  build-depends:       attoparsec,
                       base == 4.*,
                       base16-bytestring,
                       binary,
                       bytestring,
                       directory,
                       filepath,
                       io-streams,
                       old-locale,
                       process,
                       SHA,
                       text,
                       thyme,
                       zlib
  ghc-options:         -Wall
                       -O2

executable hush
  hs-source-dirs:      bin
  main-is:             hush.hs
  build-depends:       base == 4.*,
                       bytestring,
                       directory,
                       filepath,
                       SHA,
                       zlib
  ghc-options:         -Wall
                       -O2
